# RockSat-Software

./: .gitignore  README.md
IntegrationTesting/: UART_to_USB_Teensy.ino
IntegrationTesting/UART-to-USB/: README.md  UART_to_USB_Teensy.ino
ML/: Camera Guide.md  ML Suite.md  capture_noir_footage.py
ML/steppers/: daemon.txt  raster_scan  raster_scan.cpp  single_stepper_test.cpp  stepper_test_history__2026-03-14__14-47.csv  stepper_test_history__2026-03-14__14-54.csv  stepper_test_history__2026-03-14__14-59.csv  stepper_test_history__2026-03-14__15-02.csv  stepper_test_history__2026-03-14__15-04.csv  stepper_test_history__2026-03-14__15-06.csv  stepper_test_history__2026-03-14__15-09.csv  stepper_test_history__2026-03-14__15-11.csv  stepper_test_history__2026-03-14__15-13.csv  stepper_test_history__2026-03-14__15-16.csv  stepper_test_history__2026-03-14__15-22.csv  stepper_test_history__2026-03-14__15-24.csv  stepper_test_history__2026-03-14__15-26.csv  stepper_test_history__2026-03-14__15-31.csv  stepper_test_history__2026-03-14__15-33.csv  stepper_test_history__2026-03-14__15-41.csv  stepper_test_history__2026-03-14__15-46.csv  stepper_test_history__2026-03-14__15-51.csv  stepper_test_history__2026-03-14__15-52.csv  stepper_test_history__2026-03-14__15-57.csv  stepper_test_history__2026-03-14__16-02.csv  (+137 more)
ML/stereovision/: CMakeLists.txt  README.md  main.cpp
ML/stereovision/include/: RPiCam.h
ML/stereovision/src/: RPiCam.cpp
PIMU/: PDR_breadboard.ino  PIMU Suite.md  README.md  dataStore.csv  platformio.ini
PIMU/src/: main.cpp
TS/: TS Suite.md  platformio.ini
(+37 files in other folders)
